# harness_process

./: .gitattributes  .gitignore  AGENTS.md  CHECKPOINTS.md  README.md  UPDATING.md  debug_ui.js  feature_list.json  graph_memory.py  harness.py  harness_check.sh  harness_cli.ps1  harness_status.sh  init.sh  setup_harness.ps1  setup_harness.sh  validate_ui.sh
docs/: architecture.md  conventions.md  estado-feature-1-powershell-windows-installer.md  estado-feature-2-remove-python-full-rust-migration.md  impl-1.md  impl-2.md  plan-feature-1-powershell-windows-installer.md  plan-feature-2-remove-python-full-rust-migration.md  review-1.md  review-2.md  verification.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
progress/: current.md  history.md
roles/: README.md  implementer.md  leader.md  reviewer.md
rust/: Cargo.toml
rust/src/: cli.rs  exit.rs  features.rs  graphify.rs  main.rs  memories.rs  paths.rs  plan.rs  progress.rs  pycompat.rs
rust/src/commands/: add.rs  advance.rs  autocheck.rs  check_plan.rs  close.rs  mod.rs  next.rs  nudge.rs  start.rs  status.rs
rust/src/graph/: commands.rs  derive.rs  ids.rs  mod.rs  store.rs  tls.rs
rust/tests/: cli_basics.rs
templates/: CHECKPOINTS.md  UPDATING.md  commit_guard.sh  graph_memory.py  harness.py  harness_check.sh  harness_cli  harness_cli.ps1  harness_status.sh  init.sh
tests/: parity_smoke.sh  setup_smoke.ps1  setup_smoke.sh
(+9 files in other folders)
