[package]
name = "harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Harness Process: ciclo de vida de features + Memory Hub PostgreSQL (port de harness.py + graph_memory.py)"
publish = false

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
fd-lock = "4.0.4"
hex = "0.4.3"
indexmap = "2.14.0"
pathdiff = "0.2.3"
postgres = { version = "0.19.13", features = ["with-serde_json-1"] }
regex = "1.12.4"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio-postgres-rustls = "0.14.0"
wait-timeout = "0.2.1"
which = "8.0.3"

[dev-dependencies]
assert_cmd = "2.2.2"
filetime = "0.2.29"
predicates = "3.1.4"

[profile.release]
strip = true
lto = "thin"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
